:construction_worker: be: report entity
