# backend/src/domain/entities/Report.ts
@@ -1,0 +1,17 @@
+export interface ReportFile {
+    id: string;
+    filename: string;
+    path: string;
+    createdAt: Date;
+}
+
+export interface Report {
+  id: string;
+  senderName: string;
+  senderAge: number;
+  message: string;
+  institutionId: string;
+  files: ReportFile[];
+  createdAt: Date;
+  updatedAt: Date;
+}
